<resources>
    <string name="app_name">homeworks</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_movie_details">MovieDetailsActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="film_name">Avengers:\nEnd Game</string>
    <string name="tags">Action, Adventure, Fantasy</string>
    <string name="storyline">Storyline</string>
    <string name="cast">Cast</string>
    <string name="description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="ironman">Robert Downey Jr.</string>
    <string name="hulk_name">Mark Ruffalo</string>
    <string name="captain_name">Chris Evans</string>
    <string name="thor_name">Chris Hemsworth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_adventure_drama">Action, Adventure, Drama</string>
    <string name="avengers_end_game">Avengers: End Game</string>
    <string name="background">background</string>
    <string name="movie_main_poster">Movie\'s main poster</string>
    <string name="age_restriction">age restriction</string>
    <string name="like_icon">like icon</string>
    <string name="background_mask">background mask</string>
    <string name="review_number">%1$d REVIEWS</string>
    <string name="minimal_age">%1$d+</string>
    <string name="runtime">%1$d MIN</string>
    <string name="movies_poster">Movies poster</string>
    <string name="back_button">back button</string>
    <string name="movies_list_header">movies list header</string>
    <string name="actor_picture">actor picture</string>
</resources>