<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie1"
    android:layout_width="166dp"
    android:layout_height="wrap_content"
    android:background="@color/dark_dark_grey"
    app:layout_constraintBottom_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/bg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_bg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/background" />

        <ImageView
            android:id="@+id/main_poster"
            android:layout_width="0dp"
            android:layout_height="248dp"
            android:src="@drawable/avengers_poster"
            app:layout_constraintStart_toStartOf="@+id/bg"
            app:layout_constraintEnd_toEndOf="@+id/bg"
            app:layout_constraintTop_toTopOf="@+id/bg"
            android:contentDescription="@string/movie_main_poster" />

        <ImageView
            android:id="@+id/age_restriction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="6dp"
            android:background="@drawable/ic_age_13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/main_poster"
            android:contentDescription="@string/age_restriction" />

        <ImageView
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/ic_like"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/main_poster"
            android:contentDescription="@string/like_icon" />

        <ImageView
            android:id="@+id/mask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_mask"
            android:contentDescription="@string/background_mask"
            app:layout_constraintEnd_toEndOf="@+id/main_poster"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/main_poster"
            app:layout_constraintTop_toTopOf="@+id/main_poster" />

        <LinearLayout
            android:id="@+id/reviews_layout"
            android:layout_width="wrap_content"
            android:layout_height="16sp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/mask">
        </LinearLayout>

        <TextView
            android:id="@+id/reviews_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6sp"
            android:textColor="@color/grey"
            android:fontFamily="@font/roboto"
            android:textSize="8sp"
            tools:text="125 REVIEWS"
            app:layout_constraintStart_toEndOf="@+id/reviews_layout"
            app:layout_constraintTop_toTopOf="@+id/reviews_layout"
            app:layout_constraintBottom_toBottomOf="@+id/reviews_layout"
            />

        <TextView
            android:id="@+id/genre"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6sp"
            android:layout_marginBottom="2sp"
            android:textColor="@color/red"
            android:fontFamily="@font/roboto"
            android:textSize="8sp"
            android:text="@string/action_adventure_drama"
            app:layout_constraintEnd_toEndOf="@+id/main_poster"
            app:layout_constraintStart_toStartOf="@+id/main_poster"
            app:layout_constraintBottom_toTopOf="@+id/reviews_layout" />

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6sp"
            android:layout_marginBottom="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto"
            android:textSize="14sp"
            android:text="@string/avengers_end_game"
            app:layout_constraintEnd_toEndOf="@+id/main_poster"
            app:layout_constraintStart_toStartOf="@+id/main_poster"
            app:layout_constraintBottom_toBottomOf="@+id/bg" />

        <TextView
            android:id="@+id/movie_length"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_grey"
            android:fontFamily="@font/roboto"
            android:textSize="8sp"
            tools:text="137 min"
            app:layout_constraintStart_toStartOf="@+id/movie_name"
            app:layout_constraintTop_toBottomOf="@+id/movie_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>