<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191926">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_edge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_edge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/main_poster"
            android:layout_width="375dp"
            android:layout_height="298dp"
            android:background="@drawable/avengers"
            app:layout_constraintStart_toStartOf="@id/left_edge"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="59dp"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/film_name"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/left_edge"
            app:layout_constraintEnd_toEndOf="@+id/right_edge"
            app:layout_constraintBottom_toBottomOf="@+id/main_poster"
            app:layout_constraintTop_toBottomOf="@+id/main_poster" />

        <TextView
            android:id="@+id/age_restriction"
            android:layout_width="20sp"
            android:layout_height="14sp"
            android:layout_marginBottom="8sp"
            android:text="13+"
            android:textSize="10sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/movie_name"
            app:layout_constraintStart_toStartOf="@+id/left_edge" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4sp"
            android:text="@string/tags"
            android:textSize="14sp"
            android:textColor="#FF3466"
            app:layout_constraintStart_toStartOf="@+id/left_edge"
            app:layout_constraintEnd_toEndOf="@+id/right_edge"
            app:layout_constraintTop_toBottomOf="@+id/movie_name" />

        <LinearLayout
            android:id="@+id/reviews_layout"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@+id/left_edge"
            app:layout_constraintEnd_toEndOf="@+id/right_edge"
            app:layout_constraintTop_toBottomOf="@+id/genre">

            <ImageView
                android:id="@+id/star_1"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_star_filled"/>
            <ImageView
                android:id="@+id/star_2"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_star_filled"/>
            <ImageView
                android:id="@+id/star_3"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_star_filled"/>
            <ImageView
                android:id="@+id/star_4"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_star_filled"/>

            <ImageView
                android:id="@+id/star_5"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_star_empty"/>
            <TextView
                android:id="@+id/reviews_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:textColor="@color/grey"
                android:text="125 REVIEWS"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/storyline_header"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:paddingTop="24sp"
            android:text="@string/storyline"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/left_edge"
            app:layout_constraintEnd_toStartOf="@+id/right_edge"
            app:layout_constraintTop_toBottomOf="@+id/reviews_layout" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:paddingTop="24sp"
            android:text="@string/description"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/left_edge"
            app:layout_constraintEnd_toStartOf="@+id/right_edge"
            app:layout_constraintTop_toBottomOf="@+id/storyline_header" />

        <TextView
            android:id="@+id/cast_header"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:paddingTop="24sp"
            android:text="@string/cast"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/left_edge"
            app:layout_constraintEnd_toStartOf="@+id/right_edge"
            app:layout_constraintTop_toBottomOf="@+id/storyline" />

        <ImageView
            android:id="@+id/actor1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ironman"
            app:layout_constraintStart_toStartOf="@+id/left_edge"
            app:layout_constraintTop_toBottomOf="@+id/cast_header" />

        <TextView
            android:id="@+id/actor1_name"
            android:layout_width="0sp"
            android:layout_height="50sp"
            android:text="@string/ironman"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:paddingTop="6sp"
            app:layout_constraintStart_toStartOf="@+id/actor1"
            app:layout_constraintEnd_toEndOf="@+id/actor1"
            app:layout_constraintTop_toBottomOf="@+id/actor1" />

        <ImageView
            android:id="@+id/actor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/captain"
            android:paddingLeft="8dp"
            app:layout_constraintStart_toEndOf="@+id/actor1"
            app:layout_constraintTop_toBottomOf="@+id/cast_header" />
        <TextView
            android:id="@+id/actor2_name"
            android:layout_width="0sp"
            android:layout_height="50sp"
            android:text="@string/captain_name"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:paddingTop="6sp"
            android:paddingLeft="8sp"
            app:layout_constraintStart_toStartOf="@+id/actor2"
            app:layout_constraintEnd_toEndOf="@+id/actor2"
            app:layout_constraintTop_toBottomOf="@+id/actor2" />

        <ImageView
            android:id="@+id/actor3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:src="@drawable/hulk"
            android:paddingLeft="8dp"
            app:layout_constraintStart_toEndOf="@+id/actor2"
            app:layout_constraintTop_toBottomOf="@+id/cast_header" />
        <TextView
            android:id="@+id/actor3_name"
            android:layout_width="0sp"
            android:layout_height="50sp"
            android:text="@string/hulk_name"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:paddingTop="6sp"
            android:paddingLeft="8sp"
            app:layout_constraintStart_toStartOf="@+id/actor3"
            app:layout_constraintEnd_toEndOf="@+id/actor3"
            app:layout_constraintTop_toBottomOf="@+id/actor3" />

        <ImageView
            android:id="@+id/actor4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:src="@drawable/thor"
            android:paddingLeft="8dp"
            app:layout_constraintStart_toEndOf="@+id/actor3"
            app:layout_constraintTop_toBottomOf="@+id/cast_header" />
        <TextView
            android:id="@+id/actor4_name"
            android:layout_width="0sp"
            android:layout_height="50sp"
            android:text="@string/thor_name"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:paddingTop="6sp"
            android:paddingLeft="8sp"
            app:layout_constraintStart_toStartOf="@+id/actor4"
            app:layout_constraintEnd_toEndOf="@+id/actor4"
            app:layout_constraintTop_toBottomOf="@+id/actor4" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>